...
    }
    

   
    func showMessage(message : String)
    {let alert = UIAlertController(title: "Sign in", message: " \(message) ", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: NSLocalizedString("OK", comment: "Default action"), style: .default, handler:nil
        ))
        self.present(alert, animated: true, completion: nil)
        
    }
   func signup()
    {
...
    }
    
    func showSignupCompletionAlert()
    {
        let credentials  = getUserCredintialsFromStore()
        
        let alert = UIAlertController(title: "Signup successfull", message: "user name : \(credentials?.userName ?? "admin") \n password : \(credentials?.password ?? "password")", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: NSLocalizedString("OK", comment: "Default action"), style: .default, handler: { _ in
        NSLog("The \"OK\" alert occured.")
        }))
        self.present(alert, animated: true, completion: nil)
    }

...
