...
        }
    }
    @IBOutlet weak var barButton: UIBarButtonItem!
    @IBOutlet weak var agreeTermsButton: UIButton!
    @IBAction func deleteItem(_ sender: Any) {
        
        let destroyAction = UIAlertAction(title: "Delete",
                     style: .destructive) { (action) in
            // Respond to user selection of the action
           }
           let cancelAction = UIAlertAction(title: "Cancel",
                     style: .cancel) { (action) in
            // Respond to user selection of the action
...
